# clipsel-rs

./: Cargo.toml
src/: clip.rs  clipselrs_en.hlf  clipselrs_ru.hlf  lib.rs  lng.rs
